Fixing header on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3137,7 +3137,7 @@
 			position: absolute;
 			top: 0;
 			color: #e5474b;
-			font-size: 1.75em;
+			font-size: 1.3em;
 			text-transform: none;
 			font-weight: normal;
 			padding: 0;
